move images to the images folder

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                 <a href="">Projects</a>
                 <a href="">Services</a>
                 <a href="">Contact Us</a>
-                <img id="hamburger-img" src="./hamburgermenu.png" alt="Hamburger Menu">
+                <img id="hamburger-img" src="images/hamburgermenu.png" alt="Hamburger Menu">
             </div>
         </nav>
     </header>
@@ -32,7 +32,7 @@
     <aside class="side-menu" id="side-menu-page">
         <header class="side-menu-header">
             <img id="logo-img" src="" alt="Ordinary Paths Logo">
-            <img id="menu-close" src="./cross.png" alt="Close this menu">
+            <img id="menu-close" src="images/cross.png" alt="Close this menu">
         </header>
         <div class="side-menu-content">
             <a href="">About Us</a>
@@ -60,7 +60,7 @@
         <section class="projects">
             <h1>Our Projects</h1>
             <div class="project-pic-container">
-                <img src="./project-pic1.jpeg" alt="Project 1" id="project-img">
+                <img src="images/project-pic1.jpeg" alt="Project 1" id="project-img">
                 <div class="pic-change-btns">
                     <button id="page-down">&lsaquo;</button>
                     <button id="page-up">&rsaquo;</button>
@@ -72,17 +72,17 @@
             <h1>Our Services</h1>
             <div class="show-services">
                 <div class="single-service" >
-                    <img class="icons" src="./customiseddesign.png" alt="">
+                    <img class="icons" src="images/customiseddesign.png" alt="">
                     <h3>Customised Design</h3>
                     <p>We design customised website customised website customised website customised website customised website</p>
                 </div>
                 <div class="single-service">
-                    <img class="icons" src="./responsive.png" alt="">
+                    <img class="icons" src="images/responsive.png" alt="">
                     <h3>Responsive Website</h3>
                     <p>responsive design responsive design responsive design responsive design responsive design</p>
                 </div>
                 <div class="single-service">
-                    <img class="icons" src="./appdevelopment.png" alt="">
+                    <img class="icons" src="images/appdevelopment.png" alt="">
                     <h3>App Development</h3>
                     <p>app development app development app development app development app development app development</p>
                 </div>
