--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <header>
         <nav class="main-nav">
             <div class="main-nav-logo">
-                <img id="logo-img" src="" alt="Ordinary Paths Logo">
+                <img id="logo-img" src="./images/logo-img.png" alt="Ordinary Paths Logo">
                 <div class="logo-slogan">
                     <h3 id="slogan-line1">ORDINARY PATHS</h3>
                     <p id="slogan-line2">Web Design & App Development</p>
@@ -31,7 +31,7 @@
     <!-- side-menu ----------------------->
     <aside class="side-menu" id="side-menu-page">
         <header class="side-menu-header">
-            <img id="logo-img" src="" alt="Ordinary Paths Logo">
+            <img id="logo-img" src="./images/logo-img.png" alt="Ordinary Paths Logo">
             <img id="menu-close" src="images/cross.png" alt="Close this menu">
         </header>
         <div class="side-menu-content">
@@ -74,17 +74,17 @@
                 <div class="single-service" >
                     <img class="icons" src="images/customiseddesign.png" alt="">
                     <h3>Customised Design</h3>
-                    <p>We design customised website customised website customised website customised website customised website</p>
+                    <p>Our design & technology team will consult with you to determine the appropriate technology stack to support business objectives and user needs.</p>
                 </div>
                 <div class="single-service">
                     <img class="icons" src="images/responsive.png" alt="">
                     <h3>Responsive Website</h3>
-                    <p>responsive design responsive design responsive design responsive design responsive design</p>
+                    <p>Your customers can explore your site on any device, phones, tablets, laptops & desktops.</p>
                 </div>
                 <div class="single-service">
                     <img class="icons" src="images/appdevelopment.png" alt="">
                     <h3>App Development</h3>
-                    <p>app development app development app development app development app development app development</p>
+                    <p>We build stunning user-centred mobile applications for local enterprises and startups, using an innovative development approach.</p>
                 </div>
             </div>
         </section>
@@ -130,9 +130,16 @@
                     </select>
                     <label for="requirements">Tell us briefly about your business, and website requirements</label>
                     <textarea name="requirements" id="requirements" required></textarea>
-                    <button>GO!</button>
+                    <button id="go-button">GO!</button>
                     <p id="privacy">Your privacy is important to us. We will never share your information.</p>
+                    <div class="thanks-box">
+                        <div class="thanks">
+                            <p>Thanks for contacting us.</p>
+                            <p>We will get back to you in 2 business days.</p>
+                        </div>
+                    </div>
                 </form>
+                
             </div>
 
         </section>
