project gallery setting update

--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
             </div>
             <div class="nav-links">
                 <a href="">Home</a>
-                <a href="">Projects</a>
-                <a href="">Services</a>
-                <a href="">Contact Us</a>
+                <a href="#projects">Projects</a>
+                <a href="#services">Services</a>
+                <a href="#contactus">Contact Us</a>
                 <img id="hamburger-img" src="images/hamburgermenu.png" alt="Hamburger Menu">
             </div>
         </nav>
@@ -57,7 +57,7 @@
             </div>
         </section>
 
-        <section class="projects">
+        <section id="projects" class="projects">
             <h1>Our Projects</h1>
             <div class="project-pic-container">
                 <img src="images/project-pic1.jpeg" alt="Project 1" id="project-img">
@@ -68,7 +68,7 @@
             </div>
         </section>
 
-        <section class="services">
+        <section id="services" class="services">
             <h1>Our Services</h1>
             <div class="show-services">
                 <div class="single-service" >
@@ -89,13 +89,12 @@
             </div>
         </section>
         
-        <section class="form-section">
+        <section id="contactus" class="form-section">
             <div class="registraion-form">
                 <div class="form-discription">
                     <h3>Enquire for a hassle free chat</h3>
                     <p>Ordinary Paths specialise in custom designed, high ranking, lead generating fast loading Google friendly websites. It does not matter if you are a plumber, electrician, builder, caterer, lawyer, hairdresser or any other industry, we will help your business make more money.</p>
                     <p>Get in contact with one of our friendly team members for a hassle free chat. Find out how we can help your business grow.</p>
-                    <h4>Call us 0433999888</h4>
                 </div>
                 <form action="" class="regi-form">
                     <label for="name">Full Name</label>
@@ -130,7 +129,7 @@
                     </select>
                     <label for="requirements">Tell us briefly about your business, and website requirements</label>
                     <textarea name="requirements" id="requirements" required></textarea>
-                    <button id="go-button">GO!</button>
+                    <button id="go-button">GO</button>
                     <p id="privacy">Your privacy is important to us. We will never share your information.</p>
                     <div class="thanks-box">
                         <div class="thanks">
@@ -147,13 +146,11 @@
     </main>
     <footer>
         <div class="bottom">
-            <h4>Our Services</h4>
             <div class="footer-links">
                 <button><a href="">Customised Design</a></button>
                 <button><a href="">Responsive Website</a></button>
                 <button><a href="">App Development</a></button>
             </div>
-            <p>Contact Us 0433999888</p>
         </div>
     </footer>
 </body>
